# REGTECG

./: .gitignore  CODEBASE_WALKTHROUGH.md  PROJECT_DOCUMENTATION.md  README.md  render.yaml
backend/: .env.example  alembic.ini  build.sh  main.py  pyproject.toml
backend/api/v1/: aml.py  analytics.py  applicant_auth.py  attendance.py  audit.py  auth.py  careers.py  cases.py  chat.py  deps.py  health.py  integration.py  kyc.py  payroll.py  portal.py  profile.py  recruitment.py  router.py  sanctions.py  signup.py  users_admin.py
backend/core/: audit.py  config.py  logging.py  middleware.py  redis.py  security.py  storage.py  telemetry.py
backend/crud/: aml.py  analytics.py  attendance.py  audit.py  case.py  integration.py  kyc.py  payroll.py  recruitment.py  role.py  sanctions.py  tenant.py  user.py
backend/db/: __init__.py  base.py  session.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_compliance_tables.py  0003_add_org_type_and_fullname.py  0004_add_document_storage.py  0005_applicant_accounts.py  0006_chat_messages.py  0007_add_updated_at_to_kyc_documents.py  0008_add_updated_at_to_chat_messages.py  0009_add_application_purpose_to_kyc_records.py  0010_add_recruitment_ats_tables.py  1226ffb6fd73_add_remaining_fintech_tables.py
backend/models/: __init__.py  aml_alert.py  analytics.py  applicant_account.py  attendance.py  audit_log.py  candidate.py  case.py  chat_message.py  employee.py  integration.py  job.py  kyc_document.py  kyc_record.py  payroll.py  role.py  role_permission.py  sanctions_screening.py  tenant.py  user.py
backend/schemas/: aml.py  analytics.py  attendance.py  audit.py  auth.py  case.py  integration.py  kyc.py  payroll.py  portal.py  recruitment.py  sanctions.py  user_admin.py
backend/services/: aml_simulator.py  auth_service.py  role_service.py  tenant_service.py  verifier.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_health.py  test_migrations.py  test_rbac.py  test_tenant.py
backend/tests/properties/: test_config_properties.py  test_health_properties.py  test_jwt_properties.py  test_rbac_properties.py  test_tenant_properties.py
backend/tests/smoke/: test_project_structure.py
backend/tests/unit/: test_logging.py  test_middleware.py  test_redis.py
backend/workers/: celery_app.py
backend/workers/tasks/: aml_tasks.py  cleanup_tasks.py  report_tasks.py  sanctions_tasks.py
frontend/: index.html  package-lock.json  package.json  (+1 more)
(+91 files in other folders)
