[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regtech-compliance-os-backend"
version = "0.1.0"
description = "RegTech Compliance OS — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "redis==5.0.4",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",    "structlog==24.1.0",
    "httpx==0.27.0",
    "celery==5.3.6",
    "celery[redis]==5.3.6",
    "weasyprint==62.3",
    "opentelemetry-api==1.24.0",
    "opentelemetry-sdk==1.24.0",
    "opentelemetry-instrumentation-fastapi==0.45b0",
    "opentelemetry-instrumentation-sqlalchemy==0.45b0",
    "opentelemetry-instrumentation-redis==0.45b0",
    "opentelemetry-exporter-prometheus==0.45b0",
    "prometheus-client==0.20.0",
    "boto3==1.34.69",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "hypothesis==6.100.1",
    "fakeredis==2.23.1",
    "ruff==0.4.4",
    "mypy==1.10.0",
    # Type stubs
    "types-passlib==1.7.7.20240327",
    "types-redis==4.6.0.20240425",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "db*", "models*", "schemas*", "services*", "crud*", "workers*", "migrations*"]

# ─── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "ANN"]
ignore = ["ANN101", "ANN102", "S101"]

# ─── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ─── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=80"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ─── Coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "migrations/*",
    "alembic.ini",
]
